# Project_CSI2372A_F2025

./: CMakeLists.txt  README.md  README.txt
include/: Board.h  Card.h  CardDeck.h  DeckFactory.h  Enums.h  Exceptions.h  Game.h  Player.h  Rubis.h  RubisDeck.h  Rules.h
src/: Board.cpp  Card.cpp  CardDeck.cpp  Enums.cpp  Game.cpp  Player.cpp  Rubis.cpp  RubisDeck.cpp  Rules.cpp  main.cpp
